--- a/index.html
+++ b/index.html
@@ -114,25 +114,22 @@
 
   <!-- Config du slider : mets ici tes vrais data-block-id -->
   <script type="application/json" id="sw-slider-config">
-  {
-    "targets": [
-      {
-        "id": "17895fdc-c23e-8026-b341-eeff283aa7ad",
-        "width": { "desktop": 420, "tablet": 360, "mobile": "80vw" },
-        "gap": 16,
-        "nav": true
-      },
-      {
-        "id": "aaaa1111-bbbb-2222-cccc-3333dddd4444",
-        "width": { "desktop": 300, "tablet": 240, "mobile": "70vw" },
-        "gap": 12,
-        "nav": true
-      }
-    ],
-    "autoplay": false,
-    "interval": 4500
-  }
-  </script>
+{
+  "targets": [
+    {
+      "id": "17895fdc-c23e-8026-b341-eeff283aa7ad",
+      "width": { "desktop": 420, "tablet": 360, "mobile": "80vw" },
+      "gap": 16,
+      "nav": true,
+      "autoplay": false,
+      "interval": 4500
+    }
+  ],
+  "autoplay": false,
+  "interval": 4500
+}
+</script>
+
 </head>
 <body>
   <div class="page">
