--- a/index.html
+++ b/index.html
@@ -3,174 +3,187 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>SWWS Slider Preview</title>
+  <title>SWWS Slider Preview — images</title>
 
-  <!-- (Optionnel) ton base.css hébergé -->
-  <link rel="stylesheet" href="base.css?v=3">
+  <!-- (Optionnel) ton base.css si tu veux -->
+  <link rel="stylesheet" href="base.css?v=5">
 
   <style>
-    /* =============== SW SLIDER (namespacé) =============== */
     :root{ --bg:#fff; --fg:#111; }
     body{ margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial; background:var(--bg); color:var(--fg); }
     .page{ max-width:1200px; margin:40px auto; padding:0 16px; }
-
     h1{ font-size:clamp(22px,3vw,32px); margin:0 0 8px; }
     .muted{ color:#666; margin:0 0 24px; }
-
-    /* conteneur de chaque "section" de test */
     .section{ margin:28px 0 40px; }
     .label{ font-size:14px; color:#666; margin:0 0 8px; }
 
+    /* ======== SLIDER namespacé (aucun conflit) ======== */
     .sw-slider {
-      display: flex !important;
-      flex-wrap: nowrap !important;
-      overflow-x: auto !important;
-      overflow-y: hidden !important;
-      gap: var(--sw-gap, 16px);
-      scroll-behavior: smooth;
-      scroll-snap-type: x mandatory;
-      -webkit-overflow-scrolling: touch;
-      padding: 4px 0 10px;
+      display:flex!important; flex-wrap:nowrap!important;
+      overflow-x:auto!important; overflow-y:hidden!important;
+      gap:var(--sw-gap,16px); padding:4px 0 10px;
+      scroll-snap-type:x mandatory; scroll-behavior:smooth;
+      -webkit-overflow-scrolling:touch;
     }
-    .sw-slider::-webkit-scrollbar { height: 8px; }
-    .sw-slider::-webkit-scrollbar-thumb { background: #cfcfcf; border-radius: 4px; }
-    .sw-slider::-webkit-scrollbar-track { background: transparent; }
+    .sw-slider::-webkit-scrollbar{ height:8px }
+    .sw-slider::-webkit-scrollbar-thumb{ background:#cfcfcf; border-radius:4px }
+    .sw-slider::-webkit-scrollbar-track{ background:transparent }
 
-    /* Cartes Notion (dans la collection) */
-    .sw-slider .notion-collection-item {
-      flex: 0 0 var(--sw-w-desktop, 320px) !important;
-      scroll-snap-align: start;
-      scroll-snap-stop: always;
-      border-radius: 16px;
-      overflow: hidden;
-      background: #f3f3f3;
+    .sw-slider .notion-collection-item{
+      flex:0 0 var(--sw-w-desktop, 420px) !important;
+      scroll-snap-align:start; scroll-snap-stop:always;
+      border-radius:16px; overflow:hidden; background:#f3f3f3;
+      /* Ratio stable des vignettes */
+      aspect-ratio: 4 / 3;
+      position: relative;
     }
 
-    /* Responsive par variables */
-    @media (max-width: 1024px) {
-      .sw-slider .notion-collection-item {
-        flex-basis: var(--sw-w-tablet, 260px) !important;
-      }
+    /* Image plein cadre */
+    .card-img{
+      position:absolute; inset:0;
+      width:100%; height:100%;
+      object-fit:cover; object-position:center;
+      display:block;
+      transition: transform .25s ease;
     }
-    @media (max-width: 768px) {
-      .sw-slider .notion-collection-item {
-        flex-basis: var(--sw-w-mobile, 70vw) !important;
-      }
+    .sw-slider .notion-collection-item:hover .card-img{ transform: scale(1.02); }
+
+    /* Légende (optionnelle) */
+    .caption{
+      position:absolute; left:10px; bottom:10px;
+      background:rgba(0,0,0,.55); color:#fff;
+      font-size:12px; line-height:1; padding:6px 8px; border-radius:6px;
     }
 
-    /* Wrapper & Boutons */
-    .sw-slider-wrap { position: relative; }
+    /* responsive */
+    @media (max-width:1024px){
+      .sw-slider .notion-collection-item{ flex-basis: var(--sw-w-tablet, 340px) !important; }
+    }
+    @media (max-width:768px){
+      .sw-slider .notion-collection-item{ flex-basis: var(--sw-w-mobile, 80vw) !important; }
+    }
 
-    .sw-slider--nav .sw-nav-btn {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      inline-size: 40px;
-      block-size: 40px;
-      border-radius: 999px;
-      background: rgba(255,255,255,0.85);
-      backdrop-filter: blur(4px);
-      box-shadow: 0 2px 12px rgba(0,0,0,0.15);
-      border: 1px solid rgba(0,0,0,0.08);
-      display: grid;
-      place-items: center;
-      cursor: pointer;
-      z-index: 3;
-      opacity: 0;
-      transition: opacity .2s ease, transform .2s ease;
+    .sw-slider-wrap{ position:relative; }
+    .sw-slider--nav .sw-nav-btn{
+      position:absolute; top:50%; transform:translateY(-50%);
+      inline-size:40px; block-size:40px; border-radius:999px;
+      background:rgba(255,255,255,.85); backdrop-filter:blur(4px);
+      border:1px solid rgba(0,0,0,.08); box-shadow:0 2px 12px rgba(0,0,0,.15);
+      display:grid; place-items:center; cursor:pointer; z-index:3; opacity:0;
+      transition:opacity .2s ease, transform .2s ease;
     }
     .sw-slider--nav .sw-nav-btn::before{
-      content: "";
-      display: block;
-      inline-size: 10px; block-size: 10px;
-      border-top: 2px solid currentColor; border-right: 2px solid currentColor;
+      content:""; display:block; inline-size:10px; block-size:10px;
+      border-top:2px solid currentColor; border-right:2px solid currentColor;
     }
-    .sw-slider--nav .sw-prev { left: 8px; }
-    .sw-slider--nav .sw-prev::before { transform: rotate(-135deg); }
-    .sw-slider--nav .sw-next { right: 8px; }
-    .sw-slider--nav .sw-next::before { transform: rotate(45deg); }
-
+    .sw-prev{ left:8px } .sw-prev::before{ transform:rotate(-135deg) }
+    .sw-next{ right:8px } .sw-next::before{ transform:rotate(45deg) }
     @media (hover:hover) and (pointer:fine){
-      .sw-slider--nav:hover .sw-nav-btn { opacity: 1; }
-      .sw-slider--nav .sw-nav-btn:active { transform: translateY(-50%) scale(.96); }
+      .sw-slider--nav:hover .sw-nav-btn{ opacity:1 }
+      .sw-slider--nav .sw-nav-btn:active{ transform:translateY(-50%) scale(.96) }
     }
-
-    @media (prefers-color-scheme: dark){
-      :root{ --bg:#0f0f0f; --fg:#f5f5f5; }
-      .sw-slider--nav .sw-nav-btn{ background: rgba(20,20,20,.7); color:#fff; border-color: rgba(255,255,255,.12); }
-      .sw-slider .notion-collection-item { background:#1c1c1c; }
+    @media (prefers-color-scheme:dark){
+      :root{ --bg:#0f0f0f; --fg:#f5f5f5 }
+      .sw-slider .notion-collection-item{ background:#1c1c1c }
+      .sw-slider--nav .sw-nav-btn{ background:rgba(20,20,20,.7); color:#fff; border-color:rgba(255,255,255,.12) }
     }
-
-    /* Démo cartes */
-    .card{
-      display:grid; place-items:center;
-      min-height:180px;
-      font-weight:600;
-    }
-
-    /* DEBUG optionnel
-    .sw-slider{ outline:3px dashed lime; } */
   </style>
 
-  <!-- Config du slider : mets ici tes vrais data-block-id -->
+  <!-- Config : mets tes VRAIS data-block-id ici -->
   <script type="application/json" id="sw-slider-config">
-{
-  "targets": [
-    {
-      "id": "17895fdc-c23e-8026-b341-eeff283aa7ad",
-      "width": { "desktop": 420, "tablet": 360, "mobile": "80vw" },
-      "gap": 16,
-      "nav": true,
-      "autoplay": false,
-      "interval": 4500
-    }
-  ],
-  "autoplay": false,
-  "interval": 4500
-}
-</script>
-
+  {
+    "targets": [
+      {
+        "id": "17895fdc-c23e-8026-b341-eeff283aa7ad",
+        "width": { "desktop": 420, "tablet": 360, "mobile": "85vw" },
+        "gap": 16,
+        "nav": true
+      },
+      {
+        "id": "aaaa1111-bbbb-2222-cccc-3333dddd4444",
+        "width": { "desktop": 320, "tablet": 280, "mobile": "75vw" },
+        "gap": 14,
+        "nav": true
+      }
+    ],
+    "autoplay": false,
+    "interval": 4500
+  }
+  </script>
 </head>
 <body>
   <div class="page">
-    <h1>SWWS Slider Preview</h1>
-    <p class="muted">Démo autonome qui simule la structure Super/Notion pour tester le module slider (sans plan payant).</p>
+    <h1>SWWS Slider Preview — images</h1>
+    <p class="muted">Démo avec images (Unsplash). Remplace les IDs ci-dessus par tes vrais <code>data-block-id</code>.</p>
 
-    <!-- SECTION 1 : une "collection" avec le VRAI ID que tu as -->
+    <!-- Galerie A : utilise TON vrai ID -->
     <div class="section">
       <div class="label">Collection A — data-block-id = 17895fdc-c23e-8026-b341-eeff283aa7ad</div>
       <div class="notion-collection" data-block-id="17895fdc-c23e-8026-b341-eeff283aa7ad">
-        <div class="notion-collection-item"><div class="card">A1</div></div>
-        <div class="notion-collection-item"><div class="card">A2</div></div>
-        <div class="notion-collection-item"><div class="card">A3</div></div>
-        <div class="notion-collection-item"><div class="card">A4</div></div>
-        <div class="notion-collection-item"><div class="card">A5</div></div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1493809842364-78817add7ffb?q=80&w=1400&auto=format&fit=crop" alt="Lampe / installation A1">
+          <span class="caption">A1</span>
+        </div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1504805572947-34fad45aed93?q=80&w=1400&auto=format&fit=crop" alt="Lampe / installation A2">
+          <span class="caption">A2</span>
+        </div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1400&auto=format&fit=crop" alt="Lampe / installation A3">
+          <span class="caption">A3</span>
+        </div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?q=80&w=1400&auto=format&fit=crop" alt="Lampe / installation A4">
+          <span class="caption">A4</span>
+        </div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1524758631624-97119bfce82d?q=80&w=1400&auto=format&fit=crop" alt="Lampe / installation A5">
+          <span class="caption">A5</span>
+        </div>
       </div>
     </div>
 
-    <!-- SECTION 2 : une autre collection avec un ID "factice" -->
+    <!-- Galerie B : ID de démo -->
     <div class="section">
       <div class="label">Collection B — data-block-id = aaaa1111-bbbb-2222-cccc-3333dddd4444</div>
       <div class="notion-collection" data-block-id="aaaa1111-bbbb-2222-cccc-3333dddd4444">
-        <div class="notion-collection-item"><div class="card">B1</div></div>
-        <div class="notion-collection-item"><div class="card">B2</div></div>
-        <div class="notion-collection-item"><div class="card">B3</div></div>
-        <div class="notion-collection-item"><div class="card">B4</div></div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1540573133985-87b6da6d54a9?q=80&w=1400&auto=format&fit=crop" alt="Objet design B1">
+          <span class="caption">B1</span>
+        </div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=1400&auto=format&fit=crop" alt="Objet design B2">
+          <span class="caption">B2</span>
+        </div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1497215728101-495ccb1d7e84?q=80&w=1400&auto=format&fit=crop" alt="Objet design B3">
+          <span class="caption">B3</span>
+        </div>
+        <div class="notion-collection-item">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1493976040374-85c8e12f0c0e?q=80&w=1400&auto=format&fit=crop" alt="Objet design B4">
+          <span class="caption">B4</span>
+        </div>
       </div>
     </div>
 
-    <!-- SECTION 3 : une collection sans ID listé (reste en grille, pas slider) -->
+    <!-- Galerie C (non listée → reste en grille normale) -->
     <div class="section">
       <div class="label">Collection C — non listée (reste en grille)</div>
-      <div class="notion-collection" data-block-id="cccc2222-dddd-3333-eeee-4444ffff5555">
-        <div class="notion-collection-item"><div class="card">C1</div></div>
-        <div class="notion-collection-item"><div class="card">C2</div></div>
-        <div class="notion-collection-item"><div class="card">C3</div></div>
+      <div class="notion-collection" data-block-id="cccc2222-dddd-3333-eeee-4444ffff5555" style="display:grid; grid-template-columns:repeat(3,minmax(0,1fr)); gap:16px;">
+        <div class="notion-collection-item" style="aspect-ratio:4/3; position:relative;">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1487014679447-9f8336841d58?q=80&w=1400&auto=format&fit=crop" alt="C1"><span class="caption">C1</span>
+        </div>
+        <div class="notion-collection-item" style="aspect-ratio:4/3; position:relative;">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1501183638710-841dd1904471?q=80&w=1400&auto=format&fit=crop" alt="C2"><span class="caption">C2</span>
+        </div>
+        <div class="notion-collection-item" style="aspect-ratio:4/3; position:relative;">
+          <img class="card-img" loading="lazy" src="https://images.unsplash.com/photo-1481277542470-605612bd2d61?q=80&w=1400&auto=format&fit=crop" alt="C3"><span class="caption">C3</span>
+        </div>
       </div>
     </div>
   </div>
 
-  <!-- Module JS (namespacé) -->
+  <!-- JS du slider (namespacé) -->
   <script>
   (function(){
     const STEP_RATIO = 0.9;
@@ -190,15 +203,7 @@
 
     function findCollection(raw){
       const a = toDashed(raw), b = toNoDash(raw);
-      let el = document.querySelector(`.notion-collection[data-block-id="${a}"]`)
-            || document.querySelector(`.notion-collection[data-block-id="${b}"]`);
-      if (el) return el;
-      const anchor = document.querySelector(`#block-${b}`) || document.querySelector(`#${a}`);
-      if (anchor){
-        const col = anchor.closest('.notion-collection, .notion-collection_view, [class*="collection"]');
-        if (col) return col;
-      }
-      return null;
+      return document.querySelector(`.notion-collection[data-block-id="${a}"], .notion-collection[data-block-id="${b}"]`);
     }
 
     function getScrollContainer(base){
@@ -225,32 +230,27 @@
       const next = document.createElement('button'); next.className = 'sw-nav-btn sw-next'; next.ariaLabel = 'Suivant';
       wrap.appendChild(prev); wrap.appendChild(next);
       const step = () => Math.max(100, scroller.clientWidth * STEP_RATIO);
-      prev.addEventListener('click', ()=> scroller.scrollBy({ left: -step(), behavior:'smooth' }));
-      next.addEventListener('click', ()=> scroller.scrollBy({ left:  step(), behavior:'smooth' }));
+      prev.addEventListener('click', ()=> scroller.scrollBy({ left: -step(), behavior: 'smooth' }));
+      next.addEventListener('click', ()=> scroller.scrollBy({ left:  step(), behavior: 'smooth' }));
     }
 
     function enhanceOne(target, cfg){
       const host = findCollection(target.id);
       if (!host) return;
-
       const scroller = getScrollContainer(host);
       scroller.classList.add('sw-slider');
 
-      // variables CSS (largeurs et gap)
       const w = target.width || {};
       if (w.desktop) scroller.style.setProperty('--sw-w-desktop', typeof w.desktop==='number' ? w.desktop+'px' : w.desktop);
       if (w.tablet)  scroller.style.setProperty('--sw-w-tablet',  typeof w.tablet ==='number' ? w.tablet +'px' : w.tablet );
       if (w.mobile)  scroller.style.setProperty('--sw-w-mobile',  typeof w.mobile ==='number' ? w.mobile +'px' : w.mobile );
-      const gap = (target.gap!=null ? target.gap : 16);
-      scroller.style.setProperty('--sw-gap', gap+'px');
+      scroller.style.setProperty('--sw-gap', ((target.gap!=null)?target.gap:16)+'px');
 
-      // boutons
       if (target.nav){
         const wrap = makeWrap(scroller);
         if (!wrap.querySelector('.sw-nav-btn')) addNav(wrap, scroller);
       }
 
-      // autoplay local (prioritaire) sinon global
       const useAutoplay = target.autoplay ?? cfg.autoplay;
       const interval = Math.max(2000, target.interval ?? cfg.interval ?? 4000);
       if (useAutoplay){
